fixed dark mode for it

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 .App {
   margin-inline: auto;
 }
+
+:root {
+  color-scheme: light only;
+  /* or just "light" */
+}
